2018-11-12 Paul Dreik <rdfind@pauldreik.se>
        * release of 1.4.1
        * fixes build failure on 32 bit platforms
        * tests: fix bad test logic in hardlink fail test
2018-11-09 Paul Dreik <rdfind@pauldreik.se>
        * release of 1.4.0
        * improve error message when failing to make symlink.
          See Github bug #5.
2018-10-28 Paul Dreik <rdfind@pauldreik.se>
	* release of 1.4.0-alpha0
	* cleanup of source to remove compiler warnings
	  and switch to c++11
	* failure of making hard links will not delete the deduplicated
	  file, if pssible. See Github bug #5. 
	* failure of making symlinks will not delete the deduplicated
	  file, if possible. See Github bug #5.
	* added option -minsize to optionally ignore files under a
	  certain size. See Github bug #1
	* add sha256 support - see Debian Bug 815120 and Github #7
	  the default checksum is now sha1 instead of md5
	* better error messages when -dryrun is misused. See Github #8
	  and Debian Bug 754663
	* performance: pruning empty files earlier and other improvements.
	  "rdfind -checksum sha1 /usr /usr" goes from 5.9 to 4.86 seconds on the
	  author's machine, with hot filesystem cache.
	* increase size of integer types to be able to handle more than INTMAX
	  files.
	* add deterministic mode, enabled by default. See Github issue #13 and
	  Debian Bug 795790. When enabled, makes the program insensitive to the
	  order of files when listing directories.
2017-01-04 Paul Dreik <rdfind@pauldreik.se>
	* release 1.3.5
	* source cleanup like removing obsolete comments, formatting.
	* fix man page typo on dryrun
	* console output showing how much space that can be saved
	  is now properly capitalized. as you may have noted, I do not
          really like uppercase...
        * make check now works again (for some reason, it broke. maybe
          due to autotools updates)
2014-08-23 Paul Dreik <rdfind@pauldreik.se>
	* fix bug in using sha1 even if md5 is selected