@@ -72,8 +72,8 @@ is disabled.
 .BR \-followsymlinks " " \fItrue\fR|\fIfalse\fR
 Follow symlinks. Default is false.
 .TP
-.BR \-removeidentinode " " \fItrue\fR|\fIfalse\fR
-Removes items found which have identical inode and device ID. Default
+.BR \-excludeidentinode " " \fItrue\fR|\fIfalse\fR
+Excludes items found which have identical inode and device ID. Default
 is true.
 .TP
 .BR \-checksum " " \fImd5\fR|\fIsha1\fR|\fIsha256\fR
