@@ -23,7 +23,7 @@ fi
 
 for checksumtype in md5 sha1 sha256; do
   dbgecho "trying checksum $checksumtype"
-  time $rdfind  -removeidentinode false -checksum $checksumtype speedtest/largefile1 speedtest/largefile2 > rdfind.out
+  time $rdfind  -excludeidentinode false -checksum $checksumtype speedtest/largefile1 speedtest/largefile2 > rdfind.out
 done
 
 dbgecho "all is good in this test!"
